# EXRay

./: .bazelrc  .clang-format  .gitignore  BUGS.md  BUILD.bazel  CHANGELOG.md  CODE_SIGNING.md  MODULE.bazel  README.md  RELEASE.md  THIRD_PARTY_LICENSES
.github/: pull_request_template.md
.github/workflows/: build.yml  release.yml
docs/: crash-dumps.md
icons/: make_ico.py
installer/: EXRay.iss
resources/: app.rc  thumbnail.rc
shaders/: tonemap.hlsl
src/: app.cpp  app.h  benchmark.cpp  benchmark.h  crash_handler.h  display_mode.h  histogram.cpp  histogram.h  image.cpp  image.h  main.cpp  renderer.cpp  renderer.h  resource.h  sequence.cpp  sequence.h  sidebar.cpp  sidebar.h  test_util.h  themes.cpp  themes.h  thumbnail_dll.cpp  thumbnail_provider.cpp  thumbnail_provider.def  thumbnail_provider.h  timing.h  update_checker.h  validate.cpp  validate.h  viewport.cpp  viewport.h  window.cpp  window.h
tests/: channel_mapping_test.cpp  compare_benchmark.sh  display_mode_test.cpp  fetch_test_images.sh  run_tests.sh  sequence_test.cpp  show_benchmark.sh  smoke_test.sh  thumbnail_test.cpp  update_checker_test.cpp
tools/: find_rc.bat
