load("@rules_cc//cc:defs.bzl", "cc_binary")

genrule(
    name = "app_resources",
    srcs = [
        "resources/app.rc",
        "resources/app.manifest",
        "resources/exray-icon.ico",
        "src/resource.h",
    ],
    outs = ["app.res"],
    # NOTE: This path is machine-specific (8.3 short name for the Windows SDK rc.exe).
    # CI workflows (.github/workflows/) auto-detect and patch it before building.
    # Locally, update this to match your Windows SDK installation.
    cmd_bat = "C:\\PROGRA~2\\WI3CF2~1\\10\\bin\\100261~1.0\\x64\\rc.exe /nologo /I . /fo $@ $(location resources/app.rc)",
)

cc_binary(
    name = "EXRay",
    srcs = [
        "src/main.cpp",
        "src/app.h",
        "src/app.cpp",
        "src/window.h",
        "src/window.cpp",
        "src/renderer.h",
        "src/renderer.cpp",
        "src/image.h",
        "src/image.cpp",
        "src/histogram.h",
        "src/histogram.cpp",
        "src/viewport.h",
        "src/viewport.cpp",
        "src/timing.h",
        "src/resource.h",
    ],
    additional_linker_inputs = [":app_resources"],
    includes = ["src"],
    deps = [
        "@openexr//:OpenEXR",
    ],
    linkopts = [
        "-SUBSYSTEM:WINDOWS",
        "-DEFAULTLIB:user32.lib",
        "-DEFAULTLIB:gdi32.lib",
        "-DEFAULTLIB:comdlg32.lib",
        "-DEFAULTLIB:shell32.lib",
        "-DEFAULTLIB:d3d11.lib",
        "-DEFAULTLIB:dxgi.lib",
        "-DEFAULTLIB:d3dcompiler.lib",
        "-DEFAULTLIB:dxguid.lib",
        "-DEFAULTLIB:comctl32.lib",
        "-DEFAULTLIB:ole32.lib",
        "$(location :app_resources)",
    ],
)
