load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "image_lib",
    srcs = ["src/image.cpp"],
    hdrs = ["src/image.h"],
    includes = ["src"],
    deps = ["@openexr//:OpenEXR"],
)

cc_library(
    name = "histogram_lib",
    srcs = ["src/histogram.cpp"],
    hdrs = ["src/histogram.h"],
    includes = ["src"],
    deps = [":image_lib"],
)

genrule(
    name = "app_resources",
    srcs = [
        "resources/app.rc",
        "resources/app.manifest",
        "resources/exray-icon.ico",
        "src/resource.h",
    ],
    tools = ["tools/find_rc.bat"],
    outs = ["app.res"],
    cmd_bat = "$(location tools/find_rc.bat) /nologo /I . /fo $@ $(location resources/app.rc)",
)

cc_binary(
    name = "EXRay",
    srcs = [
        "src/main.cpp",
        "src/app.h",
        "src/app.cpp",
        "src/window.h",
        "src/window.cpp",
        "src/renderer.h",
        "src/renderer.cpp",
        "src/validate.h",
        "src/validate.cpp",
        "src/benchmark.h",
        "src/benchmark.cpp",
        "src/test_util.h",
        "src/viewport.h",
        "src/viewport.cpp",
        "src/timing.h",
        "src/crash_handler.h",
        "src/update_checker.h",
        "src/resource.h",
    ],
    additional_linker_inputs = [":app_resources"],
    includes = ["src"],
    deps = [
        ":histogram_lib",
        ":image_lib",
        "@openexr//:OpenEXR",
    ],
    linkopts = [
        "-SUBSYSTEM:WINDOWS",
        "-DEFAULTLIB:user32.lib",
        "-DEFAULTLIB:gdi32.lib",
        "-DEFAULTLIB:comdlg32.lib",
        "-DEFAULTLIB:shell32.lib",
        "-DEFAULTLIB:d3d11.lib",
        "-DEFAULTLIB:dxgi.lib",
        "-DEFAULTLIB:d3dcompiler.lib",
        "-DEFAULTLIB:dxguid.lib",
        "-DEFAULTLIB:dcomp.lib",
        "-DEFAULTLIB:comctl32.lib",
        "-DEFAULTLIB:ole32.lib",
        "-DEFAULTLIB:dbghelp.lib",
        "-DEFAULTLIB:winhttp.lib",
        "$(location :app_resources)",
    ],
)

cc_test(
    name = "update_checker_test",
    srcs = [
        "tests/update_checker_test.cpp",
        "src/update_checker.h",
    ],
    includes = ["src"],
    linkopts = [
        "-DEFAULTLIB:winhttp.lib",
    ],
)
