load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "image_lib",
    srcs = ["src/image.cpp"],
    hdrs = ["src/image.h"],
    includes = ["src"],
    deps = ["@openexr//:OpenEXR"],
)

cc_library(
    name = "histogram_lib",
    srcs = ["src/histogram.cpp"],
    hdrs = ["src/histogram.h"],
    includes = ["src"],
    deps = [":image_lib"],
)

genrule(
    name = "app_resources",
    srcs = [
        "resources/app.rc",
        "resources/app.manifest",
        "resources/exray-icon.ico",
        "src/resource.h",
    ],
    tools = ["tools/find_rc.bat"],
    outs = ["app.res"],
    cmd_bat = "$(location tools/find_rc.bat) /nologo /I . /fo $@ $(location resources/app.rc)",
)

cc_binary(
    name = "EXRay",
    srcs = [
        "src/main.cpp",
        "src/app.h",
        "src/app.cpp",
        "src/themes.h",
        "src/themes.cpp",
        "src/window.h",
        "src/window.cpp",
        "src/sidebar.h",
        "src/sidebar.cpp",
        "src/renderer.h",
        "src/renderer.cpp",
        "src/validate.h",
        "src/validate.cpp",
        "src/benchmark.h",
        "src/benchmark.cpp",
        "src/display_mode.h",
        "src/test_util.h",
        "src/viewport.h",
        "src/viewport.cpp",
        "src/sequence.h",
        "src/sequence.cpp",
        "src/timing.h",
        "src/crash_handler.h",
        "src/update_checker.h",
        "src/resource.h",
    ],
    additional_linker_inputs = [":app_resources"],
    includes = ["src"],
    deps = [
        ":histogram_lib",
        ":image_lib",
        "@openexr//:OpenEXR",
    ],
    linkopts = [
        "-SUBSYSTEM:WINDOWS",
        "-DEFAULTLIB:user32.lib",
        "-DEFAULTLIB:gdi32.lib",
        "-DEFAULTLIB:msimg32.lib",
        "-DEFAULTLIB:comdlg32.lib",
        "-DEFAULTLIB:shell32.lib",
        "-DEFAULTLIB:d3d11.lib",
        "-DEFAULTLIB:dxgi.lib",
        "-DEFAULTLIB:d3dcompiler.lib",
        "-DEFAULTLIB:dxguid.lib",
        "-DEFAULTLIB:dcomp.lib",
        "-DEFAULTLIB:comctl32.lib",
        "-DEFAULTLIB:ole32.lib",
        "-DEFAULTLIB:dbghelp.lib",
        "-DEFAULTLIB:winhttp.lib",
        "-DEFAULTLIB:advapi32.lib",
        "-DEFAULTLIB:uxtheme.lib",
        "-DEFAULTLIB:dwmapi.lib",
        "$(location :app_resources)",
    ],
)

cc_library(
    name = "thumbnail_lib",
    srcs = ["src/thumbnail_provider.cpp"],
    hdrs = ["src/thumbnail_provider.h"],
    includes = ["src"],
    deps = ["@openexr//:OpenEXR"],
    linkopts = [
        "-DEFAULTLIB:gdi32.lib",
        "-DEFAULTLIB:ole32.lib",
    ],
)

genrule(
    name = "thumb_resources",
    srcs = [
        "resources/thumbnail.rc",
        "src/resource.h",
    ],
    tools = ["tools/find_rc.bat"],
    outs = ["thumbnail.res"],
    cmd_bat = "$(location tools/find_rc.bat) /nologo /I . /fo $@ $(location resources/thumbnail.rc)",
)

cc_binary(
    name = "EXRayThumb.dll",
    srcs = ["src/thumbnail_dll.cpp"],
    additional_linker_inputs = [":thumb_resources"],
    includes = ["src"],
    linkshared = True,
    win_def_file = "src/thumbnail_provider.def",
    deps = [":thumbnail_lib"],
    linkopts = [
        "-DEFAULTLIB:shell32.lib",
        "-DEFAULTLIB:advapi32.lib",
        "-DEFAULTLIB:shlwapi.lib",
        "$(location :thumb_resources)",
    ],
)

cc_test(
    name = "thumbnail_test",
    srcs = ["tests/thumbnail_test.cpp"],
    includes = ["src"],
    deps = [
        ":thumbnail_lib",
        "@openexr//:OpenEXR",
    ],
    linkopts = [
        "-DEFAULTLIB:gdi32.lib",
        "-DEFAULTLIB:ole32.lib",
        "-DEFAULTLIB:shlwapi.lib",
    ],
)

cc_test(
    name = "update_checker_test",
    srcs = [
        "tests/update_checker_test.cpp",
        "src/update_checker.h",
    ],
    includes = ["src"],
    linkopts = [
        "-DEFAULTLIB:winhttp.lib",
    ],
)

cc_test(
    name = "display_mode_test",
    srcs = [
        "tests/display_mode_test.cpp",
        "src/display_mode.h",
        "src/image.h",
    ],
    includes = ["src"],
)

cc_test(
    name = "channel_mapping_test",
    srcs = ["tests/channel_mapping_test.cpp"],
    includes = ["src"],
    deps = [":image_lib"],
)

cc_test(
    name = "sequence_test",
    srcs = [
        "tests/sequence_test.cpp",
        "src/sequence.h",
        "src/sequence.cpp",
    ],
    includes = ["src"],
)
